# azahar-nx

./: .gitmodules  CMakeLists.txt  README.md  azahar-nx-jit-v4-shader-nxlink-fix.diff  azahar-nx-jit-v6-host-tick-budget.diff
.azahar-nx-switch-diagnostics-backup-20260630-120054/src/switch/: CMakeLists.txt  switch_app.cpp
.azahar-patch-backups/jit-v4-shader-nxlink-20260630-142509/: RESTORE.txt
.azahar-patch-backups/jit-v4-shader-nxlink-20260630-142509/src/switch/: switch_nxlink.cpp
.azahar-patch-backups/jit-v6-host-tick-budget-20260630-202601/src/switch/: switch_jit.cpp
.azahar-patch-backups/libnx-jit-v3-20260630-132009/: RESTORE.txt
.azahar-patch-backups/libnx-jit-v3-20260630-132009/src/switch/: CMakeLists.txt
.github/workflows.disabled/: build.yml  first_time_contributor_detect.yml  first_time_contributor_reopen.yml  format.yml  libretro.yml  license-header.yml  stale.yml  transifex.yml
azahar-nx-jit-v4-shader-nxlink-fix/: README-APPLY.md  apply.py
azahar-nx-jit-v6-host-tick-budget/: README-APPLY.md  apply.py
docs/: concepts.md  instructions.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  settings.cpp  settings.h  switch_cryptopp_rng.h  switch_trace.cpp  switch_trace.h  thread.cpp
src/common/aarch64/: cpu_detect.cpp
src/common/dynamic_library/: dynamic_library.cpp
src/core/: CMakeLists.txt  core.cpp  core.h  nus_download_switch_stub.cpp
src/core/arm/dynarmic/: arm_dynarmic.cpp
src/core/frontend/: emu_window.h
src/input_common/: CMakeLists.txt  main.cpp
src/network/: CMakeLists.txt  switch_network_stub.cpp
src/switch/: CMakeLists.txt  switch_app.cpp  switch_app.h  switch_audio.cpp  switch_audio.h  switch_debug_log.cpp  switch_debug_log.h  switch_dynarmic_jit_bridge.cpp  switch_exception_handler.cpp  switch_input.cpp  switch_input.h  switch_jit.cpp  switch_jit.cpp.before-u128-fix-20260630-120634  switch_jit.h  switch_libnx.cpp  switch_libnx.h  switch_nxlink.cpp  switch_nxlink.h  switch_paths.cpp  switch_paths.h  switch_posix_compat.cpp  switch_rom_browser.cpp  switch_rom_browser.h  switch_window.cpp  switch_window.h
src/video_core/: CMakeLists.txt  gpu.cpp  gpu_impl.h  rasterizer_interface.h  video_core.cpp
src/video_core/renderer_deko3d/: deko3d_presenter.cpp  deko3d_presenter.h  deko3d_rasterizer.cpp  deko3d_rasterizer.h  deko3d_shader.cpp  deko3d_shader.h  deko3d_state.cpp  deko3d_state.h  deko3d_texture_cache.cpp  deko3d_texture_cache.h  renderer_deko3d.cpp  renderer_deko3d.h
src/video_core/renderer_software/: renderer_software.cpp
src/video_core/renderer_vulkan/: vk_platform.cpp
src/video_core/shader/: shader.cpp
(+9 files in other folders)
